make-a-wish-salesforce/src/objects/DiagnosisMedicalQuestions__c.object
<CustomObject>
    <description>Used to hold the answers to medical questions prompted by a 'Condition Description' provided by an MP during the DV process.</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to hold the related diagnosis verification for the medical question</description>
        <label>Diagnosis</label>
        <referenceTo>Diagnosis_Verification__c</referenceTo>
        <relationshipName>DiagnosisMedicalQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Epilepsy_Value__c</fullName>
        <label>Epilepsy Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Question_Answer__c</fullName>
        <label>Medical Question Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Question__c</fullName>
        <description>Used to hold the related medical question</description>
        <label>Medical Question</label>
        <referenceTo>Medical_Questions__c</referenceTo>
        <relationshipLabel>DiagnosisMedicalQuestions</relationshipLabel>
        <relationshipName>DiagnosisMedicalQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Medical Question for related 'DiagnosisMedicalQuestion' answer.</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEligible</label>
        <type>Checkbox</type>
    </fields>
    <label>Diagnosis Answer</label>
    <nameField>
        <displayFormat>DQ-{0000}</displayFormat>
        <label>Diagnosis Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnosis Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>